# DeepFilterNet

./: .gitignore  Cargo.toml
DeepFilterNet/df/: deepfilternet2.py  evaluation_utils.py  loss.py  modules.py  modules_coreml.py  modules_main2.py  multiframe.py  trace.py  train.py  utils.py  visualization.py
libDF-ffi/: Cargo.toml
libDF-ffi/include/: libdf-ffi.h  module.modulemap
libDF-ffi/src/: lib.rs  module.modulemap
