[package]
name = "libdf-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_filter = { features = ["transforms"], path = "../libDF" }
num-complex = { version = "^0.4", features = ["serde"] }

[lib]
name = "libdfffi"
crate-type = [ "staticlib" ]
